Retire Swift 1.2 article

--- a/2015-02-09-swift-1.2.md
+++ b/2015-02-09-swift-1.2.md
@@ -5,14 +5,14 @@ author: Nate Cook
 tags: swift
 excerpt: "Swift, true to its name, is moving fast. With the beta release of Swift 1.2, the Swift team has responded to so many of the community's requests in one fell swoop, we're overflowing with new and exciting features. This week, take a look at two major aspects of the release that will significantly improve the experience of working in Swift: first, big changes in `if let` optional binding, and second, new access to nullability annotations in Objective-C."
 hiddenlang: ""
+retired: true
 status:
-    swift: 1.2
+  swift: 1.2
 ---
 
-Swift, true to its name, is moving fast. This week marks the beta release of Swift 1.2, a *major* update to the language. The Swift team has responded to so many of the community's requests in one fell swoop, we're overflowing with new and exciting features. Every line-item in this announcement is a big advancement: incremental builds, improved error messages and stability in Xcode, static class properties, support for C unions and bitfields, bridging of Swift `enum`s to Objective-C, safer type casting, improvements to single-line closures, and more.
+Swift, true to its name, is moving fast. This week marks the beta release of Swift 1.2, a _major_ update to the language. The Swift team has responded to so many of the community's requests in one fell swoop, we're overflowing with new and exciting features. Every line-item in this announcement is a big advancement: incremental builds, improved error messages and stability in Xcode, static class properties, support for C unions and bitfields, bridging of Swift `enum`s to Objective-C, safer type casting, improvements to single-line closures, and more.
 
-In what follows, let's look at two major aspects of the release that will significantly improve the experience of working in Swift: first, big changes in `if let` optional binding (*"finally"*), and second, new access to nullability annotations in Objective-C.
-
+In what follows, let's look at two major aspects of the release that will significantly improve the experience of working in Swift: first, big changes in `if let` optional binding (_"finally"_), and second, new access to nullability annotations in Objective-C.
 
 ## Improved Optional Binding
 
@@ -45,12 +45,12 @@ if let a = a, b = b, c = c where c != 0 {
 ```
 
 > The order of execution in these two examples is identical. Using the new syntax, each binding is evaluated in turn, stopping if any of the attempted bindings is `nil`. Only after all the optional bindings are successful is the `where` clause checked.
-> 
-> An `if` statement can actually have more than one `let` binding separated by commas. Since each `let` binding can bind multiple optionals *and* include a `where` clause, some truly sophisticated logic is possible with this construct. (Thanks to [Stephen Celis](https://twitter.com/stephencelis) for helping clarify this point.)
+>
+> An `if` statement can actually have more than one `let` binding separated by commas. Since each `let` binding can bind multiple optionals _and_ include a `where` clause, some truly sophisticated logic is possible with this construct. (Thanks to [Stephen Celis](https://twitter.com/stephencelis) for helping clarify this point.)
 
 What's more, later binding expressions can reference earlier bindings. This means you can delve into `Dictionary` instances or cast an `AnyObject?` value to a specific type, then use it in another expression, all in a single `if let` statement.
 
-To revisit the canonical example, this is what parsing a [big block of JSON](http://jsonplaceholder.typicode.com/users) can look like in Swift 1.2. The example uses one `if let` block to handle the optionals that come with using `NSBundle`, `NSURL` and `NSData`, then another to map several `AnyObject?` instances  from the interpreted JSON to specific types:
+To revisit the canonical example, this is what parsing a [big block of JSON](http://jsonplaceholder.typicode.com/users) can look like in Swift 1.2. The example uses one `if let` block to handle the optionals that come with using `NSBundle`, `NSURL` and `NSData`, then another to map several `AnyObject?` instances from the interpreted JSON to specific types:
 
 ```swift
 var users: [User] = []
@@ -60,7 +60,7 @@ if let
     path     = NSBundle.mainBundle().pathForResource("users", ofType: "json"),
     url      = NSURL(fileURLWithPath: path),
     data     = NSData(contentsOfURL: url),
-    userList = NSJSONSerialization.JSONObjectWithData(data, options: nil, error: nil) as? [[String: AnyObject]] 
+    userList = NSJSONSerialization.JSONObjectWithData(data, options: nil, error: nil) as? [[String: AnyObject]]
 {
     // extract individual users
     for userDict in userList {
@@ -75,6 +75,7 @@ if let
     }
 }
 ```
+
 ```JSON
 [
   {
@@ -129,8 +130,6 @@ if let
 
 I see many commas in our future.
 
-
-
 ## Nullability Annotations
 
 When Swift was first released, every call to a Cocoa API method took and returned implicitly unwrapped optionals (i.e., `AnyObject!`). Because they crash a program on access, implicitly unwrapped return values are inherently unsafe if there isn't clear documentation of whether or not a method will return a null value. All those exclamation marks were a sign of bad form. Sure, Swift bridged to the Cocoa APIs, but it always looked grumpy about it.
@@ -167,7 +166,7 @@ Without any nullability annotations, each pointer in my `LocationDataController`
 class LocationDataController : NSObject {
     var locations: [AnyObject]! { get }
     var latestLocation: Location! { get }
-    
+
     func addPhoto(photo: Photo!, forLocation location: Location!)
     func photoForLocation(location: Location!) -> Photo!
 }
@@ -186,13 +185,13 @@ Enough! With! The shouting! Here's how I can now annotate the Objective-C interf
 @end
 ```
 
-First, the properties—my `locations` list is `nonnull`, since at worst it will be an empty array, but `latestLocation` *can* be `nil` if there are no locations in the list yet. Likewise, the parameters to my two methods should always have a value, yet because not all locations have a photo, that second method returns a `nullable` photo. Back in Swift, the results are much better—that is, clearer about how to safely use the data controller and no more grumpy `!`s:
+First, the properties—my `locations` list is `nonnull`, since at worst it will be an empty array, but `latestLocation` _can_ be `nil` if there are no locations in the list yet. Likewise, the parameters to my two methods should always have a value, yet because not all locations have a photo, that second method returns a `nullable` photo. Back in Swift, the results are much better—that is, clearer about how to safely use the data controller and no more grumpy `!`s:
 
 ```swift
 class LocationDataController : NSObject {
     var locations: [AnyObject] { get }
     var latestLocation: Location? { get }
-    
+
     func addPhoto(photo: Photo, forLocation location: Location)
     func photoForLocation(location: Location) -> Photo?
 }
@@ -200,7 +199,7 @@ class LocationDataController : NSObject {
 
 ### NS_ASSUME_NONNULL_BEGIN/END
 
-Annotating *any* pointer in an Objective-C header file causes the compiler to expect annotations for the entire file, bringing on a cascade of warnings. Given that most annotations will be `nonnull`, a new macro can help streamline the process of annotating existing classes. Simply mark the beginning and end of a section of your header with `NS_ASSUME_NONNULL_BEGIN` and `..._END`, then mark the exceptions.
+Annotating _any_ pointer in an Objective-C header file causes the compiler to expect annotations for the entire file, bringing on a cascade of warnings. Given that most annotations will be `nonnull`, a new macro can help streamline the process of annotating existing classes. Simply mark the beginning and end of a section of your header with `NS_ASSUME_NONNULL_BEGIN` and `..._END`, then mark the exceptions.
 
 Another revision of our data controller interface from above results in a more readable version with the exact same Swift profile:
 
@@ -228,12 +227,9 @@ The new Objective-C nullability annotations have huge benefits for code on the S
 // Nope -- Warning: Null passed to a callee that requires a non-null argument
 ```
 
-* * *
+---
 
-Excitingly, all that is just half the story. In addition to the changes in Swift syntax and compiler savoir faire, the standard library has also seen a [major revision](http://swiftdoc.org/news/2015/02/swift1.2/), including a proper `Set` class (so long, [dear friend](https://github.com/natecook1000/SwiftSets/blob/master/Set.swift)). *Okaaay,* so none of our code works anymore, and Stack Overflow has 21,000 out-of-date Swift questions? It's still fun to be along for the ride.
-
-
-
+Excitingly, all that is just half the story. In addition to the changes in Swift syntax and compiler savoir faire, the standard library has also seen a [major revision](http://swiftdoc.org/news/2015/02/swift1.2/), including a proper `Set` class (so long, [dear friend](https://github.com/natecook1000/SwiftSets/blob/master/Set.swift)). _Okaaay,_ so none of our code works anymore, and Stack Overflow has 21,000 out-of-date Swift questions? It's still fun to be along for the ride.
 
 <script language="Javascript">
 $(document).ready(function() {
