Remove hiddenlang attribute

--- a/2018-09-17-ios-12.md
+++ b/2018-09-17-ios-12.md
@@ -2,14 +2,13 @@
 title: iOS 12
 author: Mattt
 category: Miscellaneous
-excerpt: >
+excerpt: >-
   Here at NSHipster,
   we're interested in the nitty-gritty:
   the small (dare we say, _obscure_?)
   changes that add up to make a big impact to our day-to-day.
   In celebration of this week's release of iOS 12,
   we're sharing a few gems we found by trawling through API diffs.
-hiddenlang: ""
 status:
   swift: 4.2
 ---
