--- a/2019-01-07-import.md
+++ b/2019-01-07-import.md
@@ -29,8 +29,8 @@ import <#module#>
 ```
 
 This week on NSHipster,
-we'll explore the various other shapes
-for this most prominent part of Swift.
+we'll explore the other shapes
+of this most prominent part of Swift.
 
 ---
 
