Fix code formatting

--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -40,7 +40,9 @@ As consumers of Apple hardware and software ourselves, the role of design cannot
 
 But xctool's beauty is not just skin-deep: build progress can also be reported in formats that can be read by other tools:
 
-    xctool -reporter plain:output.txt build
+```terminal
+$ xctool -reporter plain:output.txt build
+```
 
 #### Reporters
 
@@ -65,11 +67,11 @@ To add Travis CI to your own Objective-C project, [create an account and webserv
 
 #### .travis.yml
 
-```{yaml}
+```yaml
 language: objective-c
 before_install:
-    - brew update
-    - brew install xctool
+  - brew update
+  - brew install xctool
 script: xctool -workspace MyApp.xcworkspace -scheme MyApp test
 ```
 
