--- a/2014-01-01-new-years-2014.md
+++ b/2014-01-01-new-years-2014.md
@@ -4,20 +4,20 @@ author: Mattt
 category: Reader Submissions
 excerpt: "As we prepare to increment our NSDateComponents -year by 1, it's time once again for NSHipster end-of-the-year Reader Submissions!"
 status:
-    swift: n/a
+  swift: n/a
 ---
 
 As we prepare to increment our `NSDateComponents -year` by `1`, it's time once again for NSHipster end-of-the-year Reader Submissions! [Last year](https://gist.github.com/mattt/4148342), we got some [mind-blowing tips and tricks](https://nshipster.com/reader-submissions-new-years-2013/). With the release of iOS 7 & Mavericks, and a year's worth of new developments in the Objective-C ecosystem, there was a ton of new stuff to write about.
 
 Thanks to [Arnaud Coomans](https://github.com/acoomans), [Cédric Luthi](https://github.com/0xced), [David Grandinetti](https://github.com/dbgrandi), [Ell Neal](https://github.com/ellneal), [Eric Allam](https://github.com/rubymaverick), [Erik Kerber](https://github.com/eskerber), [Jim Kubicek](https://github.com/jkubicek), [Joachim Bengtsson](https://github.com/nevyn), [Johannes Lund](https://github.com/Anviking), [Josh Avant](https://github.com/joshavant), [João Prado Maia](https://github.com/jpm), [Justin R. Miller](https://github.com/incanus), [Kamil Pyć](https://github.com/PycKamil), [Matthew Teece](https://github.com/mteece), [Maximilian Tagher](https://github.com/MaxGabriel), [Nigel Timothy Barber](https://github.com/mindbrix), [Nolan O'Brien](https://github.com/NSProgrammer), [Pitiphong Phongpattranont](https://github.com/pitiphong-p), [Steve Moser](https://gist.github.com/stevemoser), [Thomas Visser](https://github.com/Thomvis), [Vadim Shpakovski](https://github.com/shpakovski), & [@jurre](https://github.com/jurre) for [contributing their great tips](https://gist.github.com/7414618).
 
-* * *
+---
 
 ## GCC Code Block Evaluation C Extension
 
 Let's make this official: **NSHipster's Objective-C trend of 2013 is code block evaluation assignment**. Recommended by both [Jim Kubicek](https://github.com/jkubicek) and [Maximilian Tagher](https://github.com/MaxGabriel) (citing [this blog post](http://cocoa-dom.tumblr.com/post/56517731293/new-thing-i-do-in-code) by [Dominik Wagner](https://github.com/monkeydom)), this trick does wonders to make code cleaner, safer, and more concise.
 
-Behind the magic is a GCC C extension, which causes a code block to return a value if  enclosed within brackets and parentheses.
+Behind the magic is a GCC C extension, which causes a code block to return a value if enclosed within brackets and parentheses.
 
 Watch, as it cuts through this view controller code like butter!
 
@@ -38,7 +38,6 @@ This not only segregates configuration details into initialization, but the addi
 If code craftsmanship is important to you, strongly consider making this standard practice in your work. It may look a bit weird at first, but this will very likely become common convention by the end of 2014.
 
 ## Default Values with GNU-style Ternary `?:`
-
 
 The ternary operator, `?`, is shorthand for `if () {...} else {...}`. However, because of how difficult it can be to understand statements with ternary operators at a glance, they are generally dispreferred by veteran coders.
 
@@ -89,7 +88,6 @@ Speaking of iOS maps, [João Prado Maia](https://github.com/jpm) cites an amazin
 ## NSAttributedString + HTML in iOS 7
 
 Shifting gears a little bit, [Eric Allam](https://github.com/rubymaverick) remarks that `NSAttributedString` can do HTML now in iOS 7 with the new [`NSHTMLTextDocumentType`](https://developer.apple.com/library/ios/documentation/UIKit/Reference/NSAttributedString_UIKit_Additions/Reference/Reference.html#//apple_ref/doc/uid/TP40011688) document type attribute. Combine with [MMMarkdown](https://github.com/mdiep/MMMarkdown) for ridiculously easy [Markdown rendering in a `UITextView`](http://initwithfunk.com/blog/2013/09/29/easy-markdown-rendering-with-nsattributedstring-on-ios-7/).
-
 
 ---
 
@@ -148,7 +146,7 @@ Fortunately, [Cédric Luthi](https://github.com/0xced) shows us how to tell if a
 
 ## A .plist of Emoji, Grouped by Category
 
-In an encore submission, Cédric brings us a  [.plist file of Emoji grouped by category](https://gist.github.com/mattt/8185075) (mirrored from CloudApp to Gist in order to be more searchable). 😄👍
+In an encore submission, Cédric brings us a [.plist file of Emoji grouped by category](https://gist.github.com/mattt/8185075) (mirrored from CloudApp to Gist in order to be more searchable). 😄👍
 
 ---
 
@@ -189,7 +187,7 @@ Once again, showing off his unmatched knowledge of Objective-C internals, Cédri
 
 > Print which [context](https://gist.github.com/ddribin/5158614#comment-798104) is passed to `observeValueForKeyPath:ofObject:change:context:` in lldb.
 
->Say you have declared a context like this:
+> Say you have declared a context like this:
 
 ```objc
 static const void *MyFooContext = &MyFooContext;
@@ -246,11 +244,11 @@ NSString *keyPath = PTPKeyPathForSelectors(@selector(data), @selector(name), nil
 
 And finally, [Matthew Teece](https://github.com/mteece) gives a shout-out to [Nomad](http://nomad-cli.com), a world-class collection of command-line utilities—specifically, [Houston](https://github.com/nomad/houston), which can send and manage push notifications from the command line, or within your Ruby application.
 
-```{bash}
+```terminal
 $ apn push "<token>" -c /path/to/cert.pem -m "Hello!"
 ```
 
-* * *
+---
 
 Thus concludes this year's reader submissions. Thanks again to everyone for your submissions!
 
