--- a/2014-01-13-nsrange.md
+++ b/2014-01-13-nsrange.md
@@ -4,12 +4,12 @@ author: Mattt
 category: Cocoa
 excerpt: "NSRange is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits."
 status:
-    swift: n/a
+  swift: n/a
 ---
 
 `NSRange` is one of the essential types of Foundation. Passed around and returned in methods throughout the framework, being well-versed in this struct has a range of benefits, which this week's article will help you locate.
 
-* * *
+---
 
 Ranges are data types used to describe a contiguous interval of integers. They are most commonly used with strings, arrays, and similarly-ordered collections.
 
@@ -26,7 +26,7 @@ In practice, this approach helps mitigate common off-by-one errors when working 
 
 #### range.js
 
-```{javascript}
+```javascript
 var string = "hello, world";
 var range = [0, string.length - 1];
 ```
@@ -85,13 +85,13 @@ NSIndexSet *indexSet = [NSIndexSet indexSetWithIndexesInRange:range];
 
 Because `NSRange` is not a class, creating and using instances is done through function calls, rather than, say, instance methods.
 
-> Many of the NSRange functions are named counter to the modern conventions of Foundation and CoreFoundation wherein the relevant type of the function immediately follows the two-letter namespace. For example, `NSMakeRange` should instead be named `NSRangeMake`, following the example of `CGRectMake` and `CGSizeMake`,  et al. Similarly,  a better name for `NSEqualRanges` would be `NSRangeEqualToRange`, just like `CGPointEqualToPoint`.
+> Many of the NSRange functions are named counter to the modern conventions of Foundation and CoreFoundation wherein the relevant type of the function immediately follows the two-letter namespace. For example, `NSMakeRange` should instead be named `NSRangeMake`, following the example of `CGRectMake` and `CGSizeMake`, et al. Similarly, a better name for `NSEqualRanges` would be `NSRangeEqualToRange`, just like `CGPointEqualToPoint`.
 >
 > Although consistency in itself is likely not sufficient reason to go through the trouble of replacing existing usage, [this gist](https://gist.github.com/mattt/8402537) shows how one could make their own code base a little more OCD-friendly.
 
 ### Creating an NSRange
 
-> - `NSMakeRange`:  Creates a new NSRange from the specified values.
+> - `NSMakeRange`: Creates a new NSRange from the specified values.
 
 ```objc
 NSArray *array = @[@1, @2, @3];
@@ -109,7 +109,7 @@ NSRange range2 = NSMakeRange(2, 7);
 BOOL equal = NSEqualRanges(range1, range2); // NO
 ```
 
-> - `NSLocationInRange`:  Returns a Boolean value that indicates whether a specified position is in a given range.
+> - `NSLocationInRange`: Returns a Boolean value that indicates whether a specified position is in a given range.
 
 ```objc
 NSRange range = NSMakeRange(3, 4);
@@ -143,7 +143,7 @@ NSRange unionRange = NSUnionRange(range1, range2);
 // {.location=0, .length=9}
 ```
 
-### Converting Between NSString * & NSRange
+### Converting Between NSString \* & NSRange
 
 > - `NSStringFromRange`: Returns a string representation of a range.
 
@@ -175,7 +175,7 @@ NSRange range = NSMakeRange(0, 3);
 NSValue *value = [NSValue valueWithRange:range];
 ```
 
-* * *
+---
 
 `NSRange` is one of the few cases where some of the underlying implementation of its functions are actually exposed and inlined in the public headers:
 
