--- a/2014-03-24-nsurl.md
+++ b/2014-03-24-nsurl.md
@@ -4,11 +4,11 @@ author: Mattt
 category: Cocoa
 excerpt: "Of all the one-dimensional data types out there, URIs reign supreme. Here, in a single, human-parsable string, is every conceivable piece of information necessary to encode the location of any piece of information that has, does, and will ever exist on a computer."
 revisions:
-    "2014-03-24": Original publication.
-    "2015-09-08": Added Swift translation & section on `stringByAddingPercentEncodingWithAllowedCharacters`.
+  "2014-03-24": Original publication.
+  "2015-09-08": Added Swift translation & section on `stringByAddingPercentEncodingWithAllowedCharacters`.
 status:
-    swift: 2.0
-    reviewed: September 9, 2015
+  swift: 2.0
+  reviewed: September 9, 2015
 ---
 
 There is a simple beauty to—let's call them "one-dimensional data types": numbers or strings formatted to contain multiple values, retrievable through a mathematical operator or parsing routine. Like how the hexadecimal color <tt style="color: #EE8262;">#EE8262</tt> can have [red, green, and blue components](https://en.wikipedia.org/wiki/Web_colors) extracted by masking and shifting its bits, or how [regular expressions](https://en.wikipedia.org/wiki/Regular_expression) can match and capture complex patterns in just a few characters.
@@ -29,7 +29,7 @@ A solid grasp of network programming is rooted in an unshakeable familiarity wit
 
 > If a programming language does not have a URI module in its standard library, run, don't walk, to a real language that does.
 
-* * *
+---
 
 In Foundation, URLs are represented by `NSURL`.
 
@@ -38,6 +38,7 @@ In Foundation, URLs are represented by `NSURL`.
 ```swift
 let url = NSURL(string: "http://example.com/")
 ```
+
 ```objc
 NSURL *url = [NSURL URLWithString:@"http://example.com"];
 ```
@@ -71,6 +72,7 @@ NSURL(string:"/foo/", relativeToURL: baseURL)
 NSURL(string:"http://example2.com/", relativeToURL: baseURL)
 // http://example2.com/
 ```
+
 ```objc
 NSURL *baseURL = [NSURL URLWithString:@"http://example.com/v1/"];
 
@@ -166,6 +168,7 @@ if let escapedTitle = title.stringByAddingPercentEncodingWithAllowedCharacters(N
     components.query = "title=\(escapedTitle)"
 }
 ```
+
 ```objc
 NSString *title = @"NSURL / NSURLComponents";
 NSString *escapedTitle = [title stringByAddingPercentEncodingWithAllowedCharacters:[NSCharacterSet URLQueryAllowedCharacterSet]];
@@ -185,7 +188,8 @@ extension NSCharacterSet {
     public class func URLFragmentAllowedCharacterSet() -> NSCharacterSet
 }
 ```
-```{objective-c}
+
+```objective-c
 // Predefined character sets for the six URL components and subcomponents which allow percent encoding. These character sets are passed to -stringByAddingPercentEncodingWithAllowedCharacters:.
 @interface NSCharacterSet (NSURLUtilities)
 + (NSCharacterSet *)URLUserAllowedCharacterSet;
@@ -197,7 +201,6 @@ extension NSCharacterSet {
 @end
 ```
 
-
 ## Bookmark URLs
 
 One final topic worth mentioning are bookmark URLs, which can be used to safely reference files between application launches. Think of them as a persistent [file descriptor](https://en.wikipedia.org/wiki/File_descriptor).
@@ -206,8 +209,7 @@ One final topic worth mentioning are bookmark URLs, which can be used to safely 
 
 You can read more about bookmark URLs in ["Locating Files Using Bookmarks" from Apple's File System Programming Guide](https://developer.apple.com/library/ios/documentation/FileManagement/Conceptual/FileSystemProgrammingGuide/AccessingFilesandDirectories/AccessingFilesandDirectories.html)
 
-
-* * *
+---
 
 Forget jet packs and flying cars—my idea of an exciting future is one where everything has a URL, is encoded in Markdown, and stored in Git. If your mind isn't blown by the implications of a _universal_ resource locator, then I would invite you to reconsider.
 
