--- a/2019-01-07-import.md
+++ b/2019-01-07-import.md
@@ -167,7 +167,7 @@ from the `Pentathlon` module:
 ```swift
 import func Pentathlon.swim
 
-swim() // OK, calls Pentathlon.bike
+swim() // OK, calls Pentathlon.swim
 fence() // Error, unresolved identifier
 ```
 
