fix 2019-01-07-import.md typo

--- a/2019-01-07-import.md
+++ b/2019-01-07-import.md
@@ -327,7 +327,7 @@ In practice,
 isolating imported declarations and submodules
 doesn't confer any real benefit beyond signaling programmer intent.
 Your code won't compile any faster doing it this way.
-And since most submodules seem to to re-import their umbrella header,
+And since most submodules seem to re-import their umbrella header,
 this approach won't do anything to reduce noise in autocomplete lists.
 
 ---
