--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -145,10 +145,10 @@ The final result should look something like this:
     </tbody>
 </table>
 
-{% note %}
+{% info %}
 You can download the completed bridge.swift file
 [here](https://gist.github.com/mattt/b9d35a41c6599b7237a423715a2665c1).
-{% end %}
+{% endinfo %}
 
 ### Importing Dependencies
 
