--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -422,7 +422,7 @@ you'll only be able to import external modules in their entirety.
 ---
 
 Given the importance of this functionality,
-we think it's destined to become part of the language.
+we think `swift-sh` is destined to become part of the language.
 As momentum and excitement build around this project,
 keep an eye out in the [Swift forums](https://forums.swift.org)
 for proposals to incorporate this as a language feature
