--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -337,7 +337,7 @@ $ chmod +x bridge
 $ ./bridge
 ```
 
-{% important %}
+{% warning %}
 Using `#!/usr/bin/env swift sh` instead of `#!/usr/bin/swift sh`
 invokes the `swift` found in your environment `$PATH`
 rather than a hard-coded path.
@@ -345,7 +345,7 @@ This is especially important to keep in mind
 if you have multiple versions of Swift installed,
 such as through a language manager like
 [swiftenv](https://github.com/kylef/swiftenv).
-{% endimportant %}
+{% endwarning %}
 
 ## Current Limitations
 
