--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -76,7 +76,7 @@ let's build a Swift script to deal and print out a formatted representation of
 a hand of [Bridge](https://en.wikipedia.org/wiki/Contract_bridge).
 The final result should look something like this:
 
-<table style="width:500px; line-height:1; margin:1em;" cellpadding="5">
+<table style="line-height:1; margin:1em;" cellpadding="5">
     <tbody>
         <tr>
             <td style="width:33%;" colspan="2" rowspan="4"></td>
