--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -76,75 +76,6 @@ let's build a Swift script to deal and print out a formatted representation of
 a hand of [Bridge](https://en.wikipedia.org/wiki/Contract_bridge).
 The final result should look something like this:
 
-<table style="line-height:1; margin:1em;" cellpadding="5">
-    <tbody>
-        <tr>
-            <td style="width:33%;" colspan="2" rowspan="4"></td>
-            <td style="width:3%; font-size:120%">♠</td>
-            <td style="width:30%;">10 9 8 7</td>
-            <td style="width:33%;" colspan="2" rowspan="4"></td>
-        </tr>
-        <tr>
-            <td style="color:#FF0000; width:3%; font-size:120%">♥</td>
-            <td style="width:30%;">6 5 4 3</td>
-        </tr>
-        <tr>
-            <td style="color:#FF0000; width:3%; font-size:120%">♦</td>
-            <td style="width:30%;">---
-            </td>
-        </tr>
-        <tr>
-            <td style="color:#000000; width:3%; font-size:120%">♣</td>
-            <td style="width:30%;">7 6 5 3 2</td>
-        </tr>
-        <tr>
-            <td style="width:3%; font-size:120%">♠</td>
-            <td style="width:30%;">6 5 4 3 2</td>
-            <td colspan="2" rowspan="4" style="text-align:center;background-color:#008000; color:#FFFFFF;">
-                <p style="text-align:center;line-height:1.1em;"><b>M</b><br><br><b>Meyer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Drax</b><br><br><b>Bond</b></p>
-            </td>
-            <td style="width:3%; font-size:120%">♠</td>
-            <td style="width:80px">A K Q J</td>
-        </tr>
-        <tr>
-            <td style="color:#FF0000; width:3%; font-size:120%">♥</td>
-            <td style="width:30%;">10 9 8 7 2</td>
-            <td style="color:#FF0000; width:3%; font-size:120%">♥</td>
-            <td style="width:30%;">A K Q J</td>
-        </tr>
-        <tr>
-            <td style="color:#FF0000; width:3%; font-size:120%">♦</td>
-            <td style="width:30%;">J 10 2</td>
-            <td style="color:#FF0000; width:3%; font-size:120%">♦</td>
-            <td style="width:30%;">A K</td>
-        </tr>
-        <tr>
-            <td style="color:#000000; width:3%; font-size:120%">♣</td>
-            <td style="width:30%;">---</td>
-            <td style="color:#000000; width:3%; font-size:120%">♣</td>
-            <td style="width:30%;">K J 9</td>
-        </tr>
-        <tr>
-            <td style="width:33%;" colspan="2" rowspan="4"></td>
-            <td style="width:3%; font-size:120%">♠</td>
-            <td style="width:30%;">---</td>
-            <td colspan="2" rowspan="4"></td>
-        </tr>
-        <tr>
-            <td style="color:#FF0000; width:3%; font-size:120%">♥</td>
-            <td style="width:30%;">---</td>
-        </tr>
-        <tr>
-            <td style="color:#FF0000; width:3%; font-size:120%">♦</td>
-            <td style="width:30%;">Q 8 7 6 5 4 3 2</td>
-        </tr>
-        <tr>
-            <td style="color:#000000; width:3%; font-size:120%">♣</td>
-            <td style="width:30%;">A Q 10 8 4</td>
-        </tr>
-    </tbody>
-</table>
-
 {% info %}
 You can download the completed bridge.swift file
 [here](https://gist.github.com/mattt/b9d35a41c6599b7237a423715a2665c1).
@@ -178,7 +109,8 @@ is shorthand for specifying a version
 "equal to or greater than in the least significant digit"
 according to [Semantic Versioning](https://semver.org) conventions.
 In this case, Swift Package Manager will use the latest release
-whose major is equal to `4 and minor release is equal`0`(that is, it will use`4.0.1`or`4.0.0`, but not`4.1.0`or`5.0.0`).
+whose major is equal to `4` and minor release is equal `0`
+(that is, it will use `4.0.1` or`4.0.0`, but not `4.1.0` or `5.0.0`).
 
 For the `PlayingCard` module,
 we don't have to add an import specification for
