--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -74,6 +74,60 @@ So it feels appropriate to revisit them here.
 For this example,
 let's build a Swift script to deal and print out a formatted representation of
 a hand of [Bridge](https://en.wikipedia.org/wiki/Contract_bridge).
+The final result should look something like this:
+
+<table style="line-height:1; margin:1em;" cellpadding="5">
+    <tbody>
+        <tr>
+            <td rowspan="4"></td>
+            <td>♠ 10 9 8 7</td>
+            <td rowspan="4"></td>
+        </tr>
+        <tr>
+            <td>♥ 6 5 4 3</td>
+        </tr>
+        <tr>
+            <td>♦ ---
+            </td>
+        </tr>
+        <tr>
+            <td>♣ 7 6 5 3 2</td>
+        </tr>
+        <tr>
+            <td>♠ 6 5 4 3 2</td>
+            <td rowspan="4" style="text-align:center;background-color:#008000; color:#FFFFFF;">
+                <p style="text-align:center;line-height:1.1em;"><b>M</b><br><br><b>Meyer&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Drax</b><br><br><b>Bond</b></p>
+            </td>
+            <td>♠ A K Q J</td>
+        </tr>
+        <tr>
+            <td>♥ 10 9 8 7 2</td>
+            <td>♥ A K Q J</td>
+        </tr>
+        <tr>
+            <td>♦ J 10 2</td>
+            <td>♦ A K</td>
+        </tr>
+        <tr>
+            <td>♣ ---</td>
+            <td>♣ K J 9</td>
+        </tr>
+        <tr>
+            <td rowspan="4"></td>
+            <td>♠ ---</td>
+            <td rowspan="4"></td>
+        </tr>
+        <tr>
+            <td>♥ ---</td>
+        </tr>
+        <tr>
+            <td>♦ Q 8 7 6 5 4 3 2</td>
+        </tr>
+        <tr>
+            <td>♣ A Q 10 8 4</td>
+        </tr>
+    </tbody>
+</table>
 
 {% info %}
 You can download the completed bridge.swift file
