--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -70,7 +70,6 @@ provided a
 [`Deck`](https://github.com/apple/example-package-deckofplayingcards) of
 [`PlayingCard`](https://github.com/apple/example-package-playingcard) values.
 So it feels appropriate to revisit them here.
-
 For this example,
 let's build a Swift script to deal and print out a formatted representation of
 a hand of [Bridge](https://en.wikipedia.org/wiki/Contract_bridge).
@@ -87,8 +86,7 @@ The final result should look something like this:
             <td>♥ 6 5 4 3</td>
         </tr>
         <tr>
-            <td>♦ ---
-            </td>
+            <td>♦ &mdash;</td>
         </tr>
         <tr>
             <td>♣ 7 6 5 3 2</td>
@@ -109,16 +107,16 @@ The final result should look something like this:
             <td>♦ A K</td>
         </tr>
         <tr>
-            <td>♣ ---</td>
+            <td>♣ &mdash;</td>
             <td>♣ K J 9</td>
         </tr>
         <tr>
             <td rowspan="4"></td>
-            <td>♠ ---</td>
+            <td>♠ &mdash;</td>
             <td rowspan="4"></td>
         </tr>
         <tr>
-            <td>♥ ---</td>
+            <td>♥ &mdash;</td>
         </tr>
         <tr>
             <td>♦ Q 8 7 6 5 4 3 2</td>
@@ -326,9 +324,9 @@ $ ./bridge
 Using `#!/usr/bin/env swift sh` instead of `#!/usr/bin/swift sh`
 invokes the `swift` found in your environment `$PATH`
 rather than a hard-coded path.
-This is especially important to keep in mind
-if you have multiple versions of Swift installed,
-such as through a language manager like
+This is especially important
+for anyone with multiple versions of Swift installed,
+such as with
 [swiftenv](https://github.com/kylef/swiftenv).
 {% endwarning %}
 
