Remove discussion of /usr/bin/env

--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -138,7 +138,7 @@ Start by creating a new `.swift` file
 with a <dfn>shebang</dfn> at the beginning _(more on that later)_.
 
 ```terminal
-$ echo "#!/usr/bin/env swift sh" > bridge.swift
+$ echo "#!/usr/bin/swift sh" > bridge.swift
 ```
 
 Next,
@@ -302,11 +302,10 @@ a <dfn>shebang</dfn> (`#!`) indicates how a script should be interpreted.
 In our case, the shebang line at the top of `bridge.swift`
 tells the system to run the file using
 the `sh` subcommand
-of the `swift` command provided by the current environment
-(`/usr/bin/env`):
+of the `swift` command (`/usr/bin/swift`):
 
 ```swift
-#!/usr/bin/env swift sh
+#!/usr/bin/swift sh
 ```
 
 Doing so allows you to take the extra step
@@ -319,16 +318,6 @@ $ mv bridge.swift bridge
 $ chmod +x bridge
 $ ./bridge
 ```
-
-{% warning %}
-Using `#!/usr/bin/env swift sh` instead of `#!/usr/bin/swift sh`
-invokes the `swift` found in your environment `$PATH`
-rather than a hard-coded path.
-This is especially important
-for anyone with multiple versions of Swift installed,
-such as with
-[swiftenv](https://github.com/kylef/swiftenv).
-{% endwarning %}
 
 ## Current Limitations
 
