Edits befitting a fast-moving project

--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -272,25 +272,25 @@ as an argument to the `swift sh` subcommand.
 
 ```terminal
 $ swift sh ./bridge.swift
-North:	♠︎ K 10 9 8 5 4
-	♡ K 3
-	♢ A 10
-	♣︎ A 4 2
+North:  ♠︎ K 10 9 8 5 4
+        ♡ K 3
+        ♢ A 10
+        ♣︎ A 4 2
 
-West:	♠︎ J 3 2
-	♡ 9 6 5
-	♢ Q 9 8 3 2
-	♣︎ 6 5
+West:   ♠︎ J 3 2
+        ♡ 9 6 5
+        ♢ Q 9 8 3 2
+        ♣︎ 6 5
 
-East:	♠︎ Q 7
-	♡ A J 10 7 4
-	♢ K 5 4
-	♣︎ 10 7 3
+East:   ♠︎ Q 7
+        ♡ A J 10 7 4
+        ♢ K 5 4
+        ♣︎ 10 7 3
 
-South:	♠︎ A 6
-	♡ Q 8 2
-	♢ J 7 6
-	♣︎ K Q J 9 8
+South:  ♠︎ A 6
+        ♡ Q 8 2
+        ♢ J 7 6
+        ♣︎ K Q J 9 8
 ```
 
 _Smashing!_
@@ -326,44 +326,42 @@ it's expected for there to be a few rough edges and missing features.
 Here are some important details to keep in mind
 as you're getting started with `swift-sh`:
 
-### Dependency on GitHub
+### <del>Dependency on GitHub</del>
 
-Imported dependencies can correspond to only GitHub repositories.
+<del>Imported dependencies can correspond to only GitHub repositories.
 There's currently no way to specify other remote or local locations.
-We expect this to be added in a future release.
+We expect this to be added in a future release.</del>
+
+<ins>This is now supported in the latest version.</ins>
 
 ```swift
-// 🔮 Possible Future Syntax
-import Remote // git://example.com/Remote.git
-import Local // ~/path/to/Local.git
+import Remote // https://example.com/Remote.git
 ```
 
-### Module Names Must Match Repository Names
+### <del>Module Names Must Match Repository Names</del>
 
-`swift-sh` requires module names to match the name of their repository.
+<del>`swift-sh` requires module names to match the name of their repository.
 In many cases, this isn't a problem
 because projects typically have descriptive names.
 However, in our example,
 the `DeckOfPlayingCards` module
 was provided by the repository
-[apple/example-package-deckofplayingcards](https://github.com/apple/example-package-deckofplayingcards).
+[apple/example-package-deckofplayingcards](https://github.com/apple/example-package-deckofplayingcards).</del>
 
-You might expect the following syntax to be supported,
-but this doesn't work yet:
+<ins>You can now do this in the latest version.</ins>
 
 ```swift
-// 🔮 Possible Future Syntax
-import DeckOfPlayingCards // @apple/example-package-deckofplayingcards
+import DeckOfPlayingCards // apple/example-package-deckofplayingcards ~> 3.0.4
 ```
 
 Until such an affordance is provided,
 the easiest workaround is to fork the existing repository
 and rename your fork
-(as we did with [@NSHipster/DeckOfPlayingCards](https://github.com/NSHipster/DeckOfPlayingCards)).
+(as we did with [@NSHipster/DeckOfPlayingCards].
 
 {% info %}
 For what it's worth,
-we would have used a fork regardless
+we would have used a [fork](https://github.com/NSHipster/DeckOfPlayingCards) regardless
 since the `PlayingCard` type in the latest mainline release
 inconveniently declares `suit` and `rank` properties with `internal` access.
 {% endinfo %}
