Remove aside in response to update to DeckOfPlayingCards
Thanks, @aciidb0mb3r!

--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -351,20 +351,8 @@ was provided by the repository
 <ins>You can now do this in the latest version.</ins>
 
 ```swift
-import DeckOfPlayingCards // apple/example-package-deckofplayingcards ~> 3.0.4
+import DeckOfPlayingCards // apple/example-package-deckofplayingcards == master
 ```
-
-Until such an affordance is provided,
-the easiest workaround is to fork the existing repository
-and rename your fork
-(as we did with [@NSHipster/DeckOfPlayingCards].
-
-{% info %}
-For what it's worth,
-we would have used a [fork](https://github.com/NSHipster/DeckOfPlayingCards) regardless
-since the `PlayingCard` type in the latest mainline release
-inconveniently declares `suit` and `rank` properties with `internal` access.
-{% endinfo %}
 
 ### Lack of Support for Import Declaration Syntax
 
