--- a/2019-01-14-swift-sh.md
+++ b/2019-01-14-swift-sh.md
@@ -55,7 +55,7 @@ $ brew install mxcl/made/swift-sh
 
 {% info %}
 The `swift` command line executable
-is designed to be extensible through subcommands.
+provides extensibility through subcommands.
 If you type an unknown subcommand like `swift foo`,
 the system will look for a command called `swift-foo`.
 This mechanism allows `swift-sh` to be run either directly
